infra/k8s/prod/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: upo-notification-service:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 400m
              memory: 512Mi
